# CodeWAM

./: .env.example  .gitignore  README.md  pyproject.toml  upstreams.yaml
codewam/: __init__.py  codebook.py  model.py  native_probe.py  probe.py  runtime.py
codewam/codebook_eval/: __init__.py  cli.py  clustering.py  descriptors.py  io.py  manifest.py  metrics.py  pipeline.py  shards.py  streaming.py
codewam/data/: __init__.py  package_scan_v6.py
configs/: README.md  train.yaml
configs/codebook_eval/: export_latents_template.yaml  package_scan_v6_dense.yaml  package_scan_v6_local.yaml  public_latent_codebooks.yaml  streaming_rq_template.yaml
configs/data/: libero_2cam.yaml  package_scan_v6.yaml  robotwin.yaml
configs/model/: codewam.yaml
docs/: BOOTSTRAP.md  CODEBOOK_EVAL.md  CODEWAM_HYBRID_ARCHITECTURE.md  CODEWAM_NATIVE_DESIGN.md  CODEWAM_V1_PLAN.md  DATASET_SCALE_PLAN.md  DESIGN.md  DROID_DATASET.md  LIBERO_DATASET.md  PROJECT_LAYOUT.md  STREAMING_CODEBOOKS.md  TRAINING.md
requirements/: cluster-cu128.txt  local-dev.txt
scripts/: bootstrap_fastwam.sh  check_environment.py  codebook_eval.py  demo_package_scan_v6.py  download_droid_official.sh  download_libero_official.sh  download_models.sh  droid_official.py  libero_official.py  prepare_action_dit.sh  setup_cluster_env.sh  setup_local_env.sh  train.py  train_codebooks.sh  train_streaming_codebooks.py  train_zero1.sh  train_zero2.sh
tests/: __init__.py  test_droid_official.py  test_libero_official.py  test_manifest_and_shards.py  test_streaming_codebooks.py  test_streaming_pipeline.py
(+7 files in other folders)
